// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Page Snapshots renders EmployeeCompletePage unchanged 1`] = `
<div>
  <div
    class="box-shadow"
  >
    <div
      class="notification-box"
    >
      <h1
        class="msg-title"
      >
        ユーザの登録が完了しました。 or ユーザの更新が完了しました。 or ユーザの削除が完了しました。
      </h1>
      <div
        class="notification-box-btn"
      >
        <button
          class="btn btn-primary btn-sm"
          type="button"
        >
          OK
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Page Snapshots renders EmployeeConfirmPage unchanged 1`] = `
<div>
  <div
    class="row"
  >
    <form
      class="c-form box-shadow"
    >
      <ul
        class="show-data"
      >
        <li
          class="title"
        >
          <p>
            情報確認
          </p>
          <p>
            入力された情報をＯＫボタンクリックでＤＢへ保存してください
          </p>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            アカウント名
          </label>
          <div
            class="col-sm col-sm-10"
          >
            ntmhuong
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            グループ
          </label>
          <div
            class="col-sm col-sm-10"
          >
            Nhóm 1
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            氏名
          </label>
          <div
            class="col-sm col-sm-10"
          >
            Nguyễn Thị Mai Hương
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            カタカナ氏名
          </label>
          <div
            class="col-sm col-sm-10"
          >
            名カナ
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            生年月日
          </label>
          <div
            class="col-sm col-sm-10"
          >
            1983/07/08
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            メールアドレス
          </label>
          <div
            class="col-sm col-sm-10"
          >
            メールアドレス
          </div>
        </li>
        <li
          class="form-group row d-flex  bor-none"
        >
          <label
            class="col-form-label col-sm-2"
          >
            電話番号
          </label>
          <div
            class="col-sm col-sm-10"
          >
            0914326386
          </div>
        </li>
        <li
          class="title mt-12"
        >
          <a
            href="#!"
          >
            日本語能力
          </a>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            資格
          </label>
          <div
            class="col-sm col-sm-10"
          >
            Trình độ tiếng nhật cấp 1
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            資格交付日
          </label>
          <div
            class="col-sm col-sm-10"
          >
            2010/07/08
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            失効日
          </label>
          <div
            class="col-sm col-sm-10"
          >
            2010/07/08
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            点数
          </label>
          <div
            class="col-sm col-sm-10"
          >
            290
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <div
            class="btn-group col-sm col-sm-10 ml"
          >
            <button
              class="btn btn-primary btn-sm"
              type="button"
            >
              OK
            </button>
            <button
              class="btn btn-secondary btn-sm"
              type="button"
            >
              戻る
            </button>
          </div>
        </li>
      </ul>
    </form>
  </div>
</div>
`;

exports[`Page Snapshots renders EmployeeDetailPage unchanged 1`] = `
<div>
  <div
    class="row"
  >
    <form
      class="c-form box-shadow"
    >
      <ul
        class="show-data"
      >
        <li
          class="title"
        >
          情報確認
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            アカウント名
          </label>
          <div
            class="col-sm col-sm-10"
          >
            ntmhuong
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            グループ
          </label>
          <div
            class="col-sm col-sm-10"
          >
            Nhóm 1
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            氏名
          </label>
          <div
            class="col-sm col-sm-10"
          >
            Nguyễn Thị Mai Hương
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            カタカナ氏名
          </label>
          <div
            class="col-sm col-sm-10"
          >
            名カナ
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            生年月日
          </label>
          <div
            class="col-sm col-sm-10"
          >
            1983/07/08
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            メールアドレス
          </label>
          <div
            class="col-sm col-sm-10"
          >
            ntmhuong@luvina.net
          </div>
        </li>
        <li
          class="form-group row d-flex  bor-none"
        >
          <label
            class="col-form-label col-sm-2"
          >
            電話番号
          </label>
          <div
            class="col-sm col-sm-10"
          >
            0914326386
          </div>
        </li>
        <li
          class="title mt-12"
        >
          <a
            href="#!"
          >
            日本語能力
          </a>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            資格
          </label>
          <div
            class="col-sm col-sm-10"
          >
            Trình độ tiếng nhật cấp 1
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            資格交付日
          </label>
          <div
            class="col-sm col-sm-10"
          >
            2010/07/08
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            失効日
          </label>
          <div
            class="col-sm col-sm-10"
          >
            2010/07/08
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            点数
          </label>
          <div
            class="col-sm col-sm-10"
          >
            290
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <div
            class="btn-group col-sm col-sm-10 ml"
          >
            <button
              class="btn btn-primary btn-sm"
              type="button"
            >
              編集
            </button>
            <button
              class="btn btn-secondary btn-sm"
              type="button"
            >
              削除
            </button>
            <button
              class="btn btn-secondary btn-sm"
              type="button"
            >
              戻る
            </button>
          </div>
        </li>
      </ul>
    </form>
  </div>
</div>
`;

exports[`Page Snapshots renders EmployeeEditPage unchanged 1`] = `
<div>
  <div
    class="row"
  >
    <form
      class="c-form box-shadow"
      id="employee-form"
      novalidate=""
    >
      <ul>
        <li
          class="title"
        >
          会員情報追加
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
            for="employee-login-id"
          >
            <i
              class="relative"
            >
              アカウント名:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control "
              id="employee-login-id"
              maxlength="50"
              name="employeeLoginId"
              type="text"
              value=""
            />
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
            for="employee-department-id"
          >
            <i
              class="relative"
            >
              グループ:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <select
              class="form-control "
              id="employee-department-id"
              name="departmentId"
            >
              <option
                value=""
              >
                選択してください
              </option>
            </select>
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
            for="employee-name"
          >
            <i
              class="relative"
            >
              氏名:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control "
              id="employee-name"
              maxlength="100"
              name="employeeName"
              type="text"
              value=""
            />
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
            for="employee-name-kana"
          >
            <i
              class="relative"
            >
              カタカナ氏名:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control "
              id="employee-name-kana"
              maxlength="100"
              name="employeeNameKana"
              type="text"
              value=""
            />
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
            for="employee-birth-date"
          >
            <i
              class="relative"
            >
              生年月日:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <div
              class="datepicker-wrapper"
            >
              <div
                class="react-datepicker-wrapper w-100"
              >
                <div
                  class="react-datepicker__input-container"
                >
                  <input
                    class="form-control "
                    id="employee-birth-date"
                    placeholder="yyyy/MM/dd"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <span
                class="glyphicon glyphicon-calendar"
              />
            </div>
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
            for="employee-email"
          >
            <i
              class="relative"
            >
              メールアドレス:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control "
              id="employee-email"
              maxlength="100"
              name="employeeEmail"
              type="text"
              value=""
            />
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
            for="employee-telephone"
          >
            <i
              class="relative"
            >
              電話番号:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control "
              id="employee-telephone"
              maxlength="14"
              name="employeeTelephone"
              type="text"
              value=""
            />
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
            for="employee-login-password"
          >
            <i
              class="relative"
            >
              パスワード:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control "
              id="employee-login-password"
              maxlength="50"
              name="employeeLoginPassword"
              type="password"
              value=""
            />
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
            for="employee-login-password-confirm"
          >
            <i
              class="relative"
            >
              パスワード（確認）:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control "
              id="employee-login-password-confirm"
              maxlength="50"
              name="employeeLoginPasswordConfirm"
              type="password"
              value=""
            />
          </div>
        </li>
        <li
          class="title mt-12"
        >
          <a
            href="#!"
          >
            日本語能力
          </a>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
            for="employee-certification-id"
          >
            <i
              class="relative"
            >
              資格:
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <select
              class="form-control"
              id="employee-certification-id"
              name="certificationId"
            >
              <option
                value=""
              >
                選択してください
              </option>
            </select>
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
            for="employee-certification-start-date"
          >
            <i
              class="relative"
            >
              資格交付日:
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <div
              class="datepicker-wrapper"
            >
              <div
                class="react-datepicker-wrapper w-100"
              >
                <div
                  class="react-datepicker__input-container"
                >
                  <input
                    class="form-control "
                    disabled=""
                    id="employee-certification-start-date"
                    placeholder="yyyy/MM/dd"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <span
                class="glyphicon glyphicon-calendar"
                style="cursor: not-allowed; opacity: 0.5;"
              />
            </div>
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
            for="employee-certification-end-date"
          >
            <i
              class="relative"
            >
              失効日:
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <div
              class="datepicker-wrapper"
            >
              <div
                class="react-datepicker-wrapper w-100"
              >
                <div
                  class="react-datepicker__input-container"
                >
                  <input
                    class="form-control "
                    disabled=""
                    id="employee-certification-end-date"
                    placeholder="yyyy/MM/dd"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <span
                class="glyphicon glyphicon-calendar"
                style="cursor: not-allowed; opacity: 0.5;"
              />
            </div>
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
            for="employee-score"
          >
            <i
              class="relative"
            >
              点数:
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control "
              disabled=""
              id="employee-score"
              name="score"
              type="text"
              value=""
            />
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <div
            class="btn-group col-sm col-sm-10 ml"
          >
            <button
              class="btn btn-primary btn-sm"
              id="btn-confirm"
              type="submit"
            >
              確認
            </button>
            <button
              class="btn btn-secondary btn-sm"
              id="btn-back"
              type="button"
            >
              戻る
            </button>
          </div>
        </li>
      </ul>
    </form>
  </div>
</div>
`;

exports[`Page Snapshots renders EmployeeListPage unchanged 1`] = `
<div>
  <div
    class="search-memb"
  >
    <h1
      class="title"
    >
      会員名称で会員を検索します。検索条件無しの場合は全て表示されます。
    </h1>
    <form
      class="c-form"
    >
      <ul
        class="d-flex"
      >
        <li
          class="form-group row"
        >
          <label
            class="col-form-label"
          >
            氏名:
          </label>
          <div
            class="col-sm"
          >
            <input
              id="search-name"
              maxlength="125"
              type="text"
              value=""
            />
          </div>
        </li>
        <li
          class="form-group row"
        >
          <label
            class="col-form-label"
          >
            グループ:
          </label>
          <div
            class="col-sm"
          >
            <select
              id="search-department"
            >
              <option
                value=""
              >
                全て
              </option>
            </select>
          </div>
        </li>
        <li
          class="form-group row"
        >
          <div
            class="btn-group"
          >
            <button
              class="btn btn-primary btn-sm"
              disabled=""
              id="btn-search"
              type="submit"
            >
              検索
            </button>
            <button
              class="btn btn-secondary btn-sm"
              id="btn-add"
              type="button"
            >
              新規追加
            </button>
          </div>
        </li>
      </ul>
    </form>
  </div>
  <div
    class="row row-table"
  >
    <div
      class="css-grid-table box-shadow"
    >
      <div
        class="css-grid-table-header"
      >
        <div>
          ID
        </div>
        <div
          id="col-sort-name"
          style="cursor: pointer;"
        >
          氏名
           ▲ ▽
        </div>
        <div>
          生年月日
        </div>
        <div>
          グループ
        </div>
        <div>
          メールアドレス
        </div>
        <div>
          電話番号
        </div>
        <div
          id="col-sort-cert"
          style="cursor: pointer;"
        >
          日本語能力
           ▲ ▽
        </div>
        <div
          id="col-sort-enddate"
          style="cursor: pointer;"
        >
          失効日
           ▲ ▽
        </div>
        <div>
          点数
        </div>
      </div>
      <div
        class="css-grid-table-body"
      >
        <div
          style="grid-column: 1 / -1; padding: 24px; text-align: center; color: rgb(136, 136, 136);"
        >
          読み込み中...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Page Snapshots renders HomePage unchanged and checks for redirection logic 1`] = `<div />`;

exports[`Page Snapshots renders RootLayout unchanged 1`] = `
<DocumentFragment>
  <main>
    <div
      class="container"
    >
      <nav
        class="nav-bar"
      >
        <div
          class="content-main"
        >
          <div
            class="d-flex"
          >
            <a
              class="navbar-brand"
              href="/employees/adm002"
            >
              <img
                alt="logo"
                data-nimg="1"
                decoding="async"
                height="50"
                loading="lazy"
                src="/assets/images/Logo-Luvina.svg"
                style="color: transparent;"
                title="Logo"
                width="100"
              />
            </a>
            <h5
              class="title-brand mr-auto"
            >
              Luvina Software
            </h5>
            <ul
              class="navbar-nav flex-row d-flex"
            >
              <li
                class="nav-item"
              >
                <a
                  href="/employees/adm002"
                >
                  トップ
                </a>
              </li>
              <li
                class="nav-item"
              >
                <a
                  href="/logout"
                >
                  ログアウト
                </a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
      <div
        class="content"
      >
        <div
          class="content-main"
        >
          <div>
            Test Child
          </div>
        </div>
      </div>
      <footer
        class="footer"
      >
        <div
          class="content-main"
        >
          <p>
            Copyright © 2026 ルビナソフトウエア株式会社. All rights reserved.
          </p>
        </div>
      </footer>
    </div>
  </main>
</DocumentFragment>
`;
